force-app/main/default/objects/Action__c/fields/ActualCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ActualCloseDate__c</fullName>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>