force-app/main/default/objects/Action__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User assigned to the Action.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssignedActions</relationshipName>
    <type>Lookup</type>
</CustomField>