force-app/main/default/objects/Action__c/fields/CloudExtel_Owner__c.field-meta.xml
<CustomField>
    <fullName>CloudExtel_Owner__c</fullName>
    <label>CloudExtel Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>