force-app/main/default/objects/Action__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <label>SpringFive Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>