force-app/main/default/objects/Action__c/fields/DaysLeft__c.field-meta.xml
<CustomField>
    <fullName>DaysLeft__c</fullName>
    <description>Number of days left to the due date.</description>
    <formula>IF (ISPICKVAL(Status__c, &quot;Open&quot;), DueDate__c - TODAY(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>