force-app/main/default/objects/Action__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Decision to which the Action is related.</description>
    <label>Decision</label>
    <referenceTo>Decision__c</referenceTo>
    <relationshipLabel>Related Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>