force-app/main/default/objects/Action__c/fields/DueDateFormula__c.field-meta.xml
<CustomField>
    <fullName>DueDateFormula__c</fullName>
    <description>Due Date of the Action to be made + Icon + Days left</description>
    <formula>IF(  
AND( ISPICKVAL( Status__c ,&quot;Open&quot;), DaysLeft__c &gt; 0) , Text(DueDate__c) &amp; &quot; ⚪️ &quot; &amp; Text(DaysLeft__c) &amp; &quot; Days Left&quot;  ,
IF(
AND( ISPICKVAL( Status__c ,&quot;Open&quot;), DaysLeft__c &lt;= 0) , Text(DueDate__c)&amp;&quot; 🟡 &quot; &amp; &quot; &quot; &amp; Text(ABS(DaysLeft__c)) &amp; &quot; Days Late&quot; , &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Text</type>
</CustomField>