force-app/main/default/objects/Action__c/fields/Feedback_Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Raised_By__c</fullName>
    <label>Feedback Raised By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>