force-app/main/default/objects/Action__c/fields/Improvement_Type__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Type__c</fullName>
    <label>Improvement Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ActionType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process_Change</fullName>
                <label>Process Change</label>
            </value>
            <value>
                <fullName>UI_Change</fullName>
                <label>UI Change</label>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>