force-app/main/default/objects/Action__c/fields/IssueRisk__c.field-meta.xml
<CustomField>
    <fullName>IssueRisk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Issue/Risk to which the Action is related.</description>
    <label>Issue / Risk</label>
    <referenceTo>IssueRisk__c</referenceTo>
    <relationshipLabel>Mitigation Actions</relationshipLabel>
    <relationshipName>RelatedActions</relationshipName>
    <type>Lookup</type>
</CustomField>