force-app/main/default/objects/Action__c/fields/Master_Tracker_Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Master_Tracker_Sr_No__c</fullName>
    <label>Master Tracker Sr.No</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>