force-app/main/default/objects/Action__c/fields/OpenPoint__c.field-meta.xml
<CustomField>
    <fullName>OpenPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Open Point</label>
    <referenceTo>OpenPoint__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>