force-app/main/default/objects/Action__c/fields/Planned_Week__c.field-meta.xml
<CustomField>
    <fullName>Planned_Week__c</fullName>
    <label>Planned Week</label>
    <length>25</length>
    <type>Text</type>
</CustomField>