force-app/main/default/objects/Action__c/fields/Proposed_By__c.field-meta.xml
<CustomField>
    <fullName>Proposed_By__c</fullName>
    <label>Proposed By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>