force-app/main/default/objects/Action__c/fields/Raised_Date__c.field-meta.xml
<CustomField>
    <fullName>Raised_Date__c</fullName>
    <label>Raised Date</label>
    <type>Date</type>
</CustomField>