force-app/main/default/objects/Action__c/fields/Release_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Name__c</fullName>
    <formula>Capability__r.Release__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release</label>
    <type>Text</type>
</CustomField>