force-app/main/default/objects/Action__c/fields/Sprint_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_End_Date__c</fullName>
    <formula>Sprint__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint End Date</label>
    <type>Date</type>
</CustomField>