force-app/main/default/objects/Action__c/fields/Sprint_Status__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Status__c</fullName>
    <formula>TEXT(Sprint__r.Sprint_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint Status</label>
    <type>Text</type>
</CustomField>