force-app/main/default/objects/Action__c/fields/WorkItem__c.field-meta.xml
<CustomField>
    <fullName>WorkItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item</label>
    <referenceTo>WorkItem__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>