force-app/main/default/objects/Action__c/listViews/Actions_FTTH.listView-meta.xml
<ListView>
    <fullName>Actions_FTTH</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>ActionType__c</columns>
    <columns>Improvement_Type__c</columns>
    <columns>DueDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Capability__c</field>
        <operation>contains</operation>
        <value>FTTH</value>
    </filters>
    <label>Actions - FTTH</label>
</ListView>