force-app/main/default/objects/Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Id__c</columns>
    <columns>NAME</columns>
    <columns>ActionType__c</columns>
    <columns>Capability__c</columns>
    <columns>Status__c</columns>
    <columns>AssignedTo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>