force-app/main/default/objects/Action__c/listViews/FTTH_W7.listView-meta.xml
<ListView>
    <fullName>FTTH_W7</fullName>
    <columns>NAME</columns>
    <columns>AssignedTo__c</columns>
    <columns>Status__c</columns>
    <columns>DueDateFormula__c</columns>
    <columns>Capability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Capability__c</field>
        <operation>contains</operation>
        <value>FTTH</value>
    </filters>
    <label>FTTH - W7</label>
</ListView>