force-app/main/default/objects/Action__c/listViews/Improvement.listView-meta.xml
<ListView>
    <fullName>Improvement</fullName>
    <columns>Id__c</columns>
    <columns>Improvement_Type__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>Capability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProjectSP__c</field>
        <operation>equals</operation>
        <value>Ops &amp; Asset Management</value>
    </filters>
    <filters>
        <field>ActionType__c</field>
        <operation>equals</operation>
        <value>Improvement</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>Improvement</label>
</ListView>