force-app/main/default/objects/Action__c/listViews/Improvements_FTTH.listView-meta.xml
<ListView>
    <fullName>Improvements_FTTH</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>ActionType__c</columns>
    <columns>Improvement_Type__c</columns>
    <columns>DueDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Capability__c</field>
        <operation>contains</operation>
        <value>FTTH</value>
    </filters>
    <filters>
        <field>ActionType__c</field>
        <operation>equals</operation>
        <value>Improvement</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,On Hold,In Progress,Completed</value>
    </filters>
    <label>Improvements - FTTH</label>
</ListView>