force-app/main/default/objects/Action__c/listViews/Integration_Action_Points.listView-meta.xml
<ListView>
    <fullName>Integration_Action_Points</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>ProjectSP__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>DueDate__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Capability__c</field>
        <operation>contains</operation>
        <value>Integration</value>
    </filters>
    <label>Integration Action Points</label>
</ListView>