force-app/main/default/objects/Action__c/listViews/My_Actions_Yashwant.listView-meta.xml
<ListView>
    <fullName>My_Actions_Yashwant</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4) AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>DueDate__c</columns>
    <columns>ActionType__c</columns>
    <columns>Release__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ActionType__c</field>
        <operation>equals</operation>
        <value>Feedback</value>
    </filters>
    <filters>
        <field>Consultant__c</field>
        <operation>contains</operation>
        <value>Kiran</value>
    </filters>
    <filters>
        <field>Consultant__c</field>
        <operation>contains</operation>
        <value>Meena</value>
    </filters>
    <filters>
        <field>Consultant__c</field>
        <operation>contains</operation>
        <value>Vignesh</value>
    </filters>
    <filters>
        <field>ActionType__c</field>
        <operation>equals</operation>
        <value>Feedback</value>
    </filters>
    <label>Pending Actions_S5</label>
</ListView>