force-app/main/default/objects/Action__c/listViews/Open_Actions_Customer.listView-meta.xml
<ListView>
    <fullName>Open_Actions_Customer</fullName>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AssignedTo__c</field>
        <operation>contains</operation>
        <value>Viral</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,On Hold,In Progress</value>
    </filters>
    <label>Open Actions - Customer</label>
</ListView>