force-app/main/default/objects/Action__c/listViews/Ops_Asset_1_0_0.listView-meta.xml
<ListView>
    <fullName>Ops_Asset_1_0_0</fullName>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Status__c</columns>
    <columns>ActionType__c</columns>
    <columns>AssignedTo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ActionType__c</field>
        <operation>equals</operation>
        <value>Feedback,Improvement</value>
    </filters>
    <filters>
        <field>Release_Name__c</field>
        <operation>equals</operation>
        <value>Ops_Asset_Management_1.0.0</value>
    </filters>
    <label>Ops &amp; Asset_1.0.0_Open</label>
</ListView>